REFECTOR : Problem 6. 예외처리 부분을 함수화 시키고 구체화